# CMPT-409

./: .envrc  .gitignore  README.md  __run_adam_family_soudry.py  __run_gd_soudry_repeated.py  __run_two_layer_adam.py  __run_two_layer_adam_testing.py  __run_two_layer_gd.py  dashboard.py  flake.nix  main.py  pyproject.toml  requirements.txt  run.py  run_adam.py  run_adam_family_soudry.py  run_gd_soudry.py  run_gd_soudry_repeated.py  run_sgd_soudry.py  run_soudry-linear-gd_sgd.py  run_two_layer_adam.py  run_two_layer_adam_testing.py  run_two_layer_gd.py  x
engine/: __init__.py  colors.py  constants.py  data.py  default_run_params.py  losses.py  metrics.py  plotting.py  strategies.py  trainer.py  types.py
engine/optimizers/: __init__.py  adaptive.py  base.py  first_order.py  manual.py
linearLayer/: adam_optimizers.py
utils/: README.md  check_compilation.py  check_engine.py  example_read_results.py  generate_data.py  print_array.py  read_results.py  strategy_scratchpad.py  test_generate_data.py
