[project]
name = "mission-generalizable"
version = "0.1.0"
description = "CMPT 409/981 Final Project, Fall 2025"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
