[project]
name = "mission-generalizable"
version = "0.1.0"
description = "CMPT 409/981 Final Project, Fall 2025"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "hsluv>=5.0.4",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.ruff.format]
# Exclude all files from being formatted by Ruff
exclude = ["**"]

[tool.pylsp.plugins.ruff]
enabled = true
# Disable Ruff acting as a formatter
format = false 
# Depending on your plugin version, you might also need:
formatEnabled = false

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pyright>=1.1.407",
]
